== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>

== 2023-06-14 Reorder Plugins in Data Access View
<p>The Data Access View configuration pane in the settings now has "up" and "down" buttons below the "Visible categories" box.</p>
<p>The order of the categories within this box can be changed by using the buttons below it.</p>
<p>The order set in the "Visible categories" box is the order which the plugins on the Data Access View will show up in.</p>

== 2023-05-05 Notes View UI Change
<p>The controls to add a new note are no longer at the bottom and have been moved to a pop-up window which appears when the "Create Note" button is pressed on the top left.</p>
<p>You can now change the colour of user notes using a color picker</p>
<p>Notes are now constrained to show 5 lines of text and a "Show More" button will appear on notes with content that exceeds that threshold.</p>
<p>Notes can now be filtered by time-range</p>

== 2023-04-18 Error Report View 
<p>A new Error Report View has been added to Constellation to assist in viewing and managing unexpected errors that might occur during normal usage.</p>
<p>There are options to control whether or not a popup message is displayed when an error occurs, based on the severity level of the error, or if it is a repeated occurrence of an error.</p>
<p>There are also filtering options to only show entries of a chosen severity level in the report panel.</p>
<p>The report panel will show all unique errors that have occurred during the current session, ordered with the most recent entries at the top. Any repeats of an existing error will increment an occurrence counter for that error.</p>
<p>Individual entries can be cleared from the list by clicking on the X in their heading. A Clear All Reports button has been provided to easily remove all entries at once.</p>